[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 19.0
margin_right = -7.0
margin_bottom = -8.0
custom_colors/line_number_color = Color( 0.803922, 0.584314, 0.054902, 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenuButton" type="MenuButton" parent="."]
margin_left = 6.0
margin_right = 41.0
margin_bottom = 20.0
text = "File"
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false, "Quit", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMenuButton" type="MenuButton" parent="."]
margin_left = 41.0
margin_right = 76.0
margin_bottom = 20.0
focus_mode = 2
text = "Help"
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="WindowDialog" parent="."]
margin_left = 412.0
margin_top = 193.0
margin_right = 621.0
margin_bottom = 315.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="About"]
margin_left = 94.0
margin_top = 93.0
margin_right = 190.0
margin_bottom = 108.0
bbcode_enabled = true
bbcode_text = "[url=,https://twitter.com/computerfan]computerfan[/url]"
text = "computerfan"

[node name="TextureRect" type="TextureRect" parent="About"]
margin_left = 11.0
margin_top = 24.0
margin_right = 75.0
margin_bottom = 88.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="About"]
margin_left = 92.0
margin_top = 30.0
margin_right = 191.0
margin_bottom = 78.0
text = "Vain Text Editor
  
    version 1.0"

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_left = 306.0
margin_top = 113.0
margin_right = 874.0
margin_bottom = 498.0
access = 2
filters = PoolStringArray( "*.txt", "*.doc", "*.docx", "*.cfg", "*.gd", ".*nj6" )
current_dir = "/Users/Public.DESKTOP-TBO8MB6/Downloads/Vain Text Editor/Vain Text Editor"
current_path = "/Users/Public.DESKTOP-TBO8MB6/Downloads/Vain Text Editor/Vain Text Editor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 309.0
margin_top = 113.0
margin_right = 871.0
margin_bottom = 500.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.txt", "*.doc", "*.docx", "*.cfg", "*.gd", "*.nj6" )
current_dir = "/Users/Public.DESKTOP-TBO8MB6/Downloads/Vain Text Editor/Vain Text Editor"
current_path = "/Users/Public.DESKTOP-TBO8MB6/Downloads/Vain Text Editor/Vain Text Editor/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="meta_clicked" from="About/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
